// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders border correctly when specified as an option 1`] = `
<DocumentFragment>
  .emotion-0 {
  max-width: 100%;
  margin-top: 24px;
  margin-bottom: 24px;
}

.emotion-1 {
  border: 0.5px solid #C1C7C6;
  width: 100%;
  border-radius: 4px;
  max-width: 100%;
}

<div
    class="figure emotion-0"
    style="width: 700px;"
  >
    <div
      class="gatsby-image-wrapper   "
      data-gatsby-image-wrapper=""
      style="position: relative; overflow: hidden;"
    >
      <div
        aria-hidden="true"
        style="padding-top: 56.25%;"
      />
      <div
        aria-hidden="true"
        data-placeholder-image=""
        style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
      />
      <img
        alt="/images/firstcluster.png"
        class="emotion-1"
        data-gatsby-image-ssr=""
        data-main-image=""
        data-src="/images/firstcluster.png"
        data-srcset="/images/firstcluster.png 320w,/images/firstcluster.png 654w,/images/firstcluster.png 768w,/images/firstcluster.png 1024w,/images/firstcluster.png 1366w,/images/firstcluster.png 1600w,/images/firstcluster.png 1920w,/images/firstcluster.png 2048w,/images/firstcluster.png 2560w,/images/firstcluster.png 3440w,/images/firstcluster.png 3840w,/images/firstcluster.png 4096w"
        decoding="async"
        loading="lazy"
        sizes="100vw"
        style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; object-fit: contain; opacity: 0;"
      />
      <noscript />
      <script
        type="module"
      >
        const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1,e.parentNode.parentNode.querySelector("[data-placeholder-image]").style.opacity=0)}}
      </script>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  max-width: 100%;
  margin-top: 24px;
  margin-bottom: 24px;
}

.emotion-1 {
  max-width: 100%;
}

<div
    class="figure emotion-0"
    style="width: 700px;"
  >
    <div
      class="gatsby-image-wrapper   "
      data-gatsby-image-wrapper=""
      style="position: relative; overflow: hidden;"
    >
      <div
        aria-hidden="true"
        style="padding-top: 56.25%;"
      />
      <div
        aria-hidden="true"
        data-placeholder-image=""
        style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
      />
      <img
        alt="/images/firstcluster.png"
        class="emotion-1"
        data-gatsby-image-ssr=""
        data-main-image=""
        data-src="/images/firstcluster.png"
        data-srcset="/images/firstcluster.png 320w,/images/firstcluster.png 654w,/images/firstcluster.png 768w,/images/firstcluster.png 1024w,/images/firstcluster.png 1366w,/images/firstcluster.png 1600w,/images/firstcluster.png 1920w,/images/firstcluster.png 2048w,/images/firstcluster.png 2560w,/images/firstcluster.png 3440w,/images/firstcluster.png 3840w,/images/firstcluster.png 4096w"
        decoding="async"
        loading="lazy"
        sizes="100vw"
        style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; object-fit: contain; opacity: 0;"
      />
      <noscript />
      <script
        type="module"
      >
        const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1,e.parentNode.parentNode.querySelector("[data-placeholder-image]").style.opacity=0)}}
      </script>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders lightbox correctly when specified as an option 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 700px;
  cursor: pointer;
  margin-top: 24px;
  margin-bottom: 24px;
  display: block;
}

.emotion-2 {
  max-width: 100%;
}

.emotion-3 {
  color: #444;
  font-size: 80%;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
  text-align: center;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      role="button"
      tabindex="-1"
    >
      <div
        class="gatsby-image-wrapper   "
        data-gatsby-image-wrapper=""
        style="position: relative; overflow: hidden;"
      >
        <div
          aria-hidden="true"
          style="padding-top: 56.25%;"
        />
        <div
          aria-hidden="true"
          data-placeholder-image=""
          style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
        />
        <img
          alt="/images/firstcluster.png"
          class="emotion-2"
          data-gatsby-image-ssr=""
          data-main-image=""
          data-src="/images/firstcluster.png"
          data-srcset="/images/firstcluster.png 320w,/images/firstcluster.png 654w,/images/firstcluster.png 768w,/images/firstcluster.png 1024w,/images/firstcluster.png 1366w,/images/firstcluster.png 1600w,/images/firstcluster.png 1920w,/images/firstcluster.png 2048w,/images/firstcluster.png 2560w,/images/firstcluster.png 3440w,/images/firstcluster.png 3840w,/images/firstcluster.png 4096w"
          decoding="async"
          loading="lazy"
          sizes="100vw"
          style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; object-fit: contain; opacity: 0;"
        />
        <noscript />
        <script
          type="module"
        >
          const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1,e.parentNode.parentNode.querySelector("[data-placeholder-image]").style.opacity=0)}}
        </script>
      </div>
      <div
        class="emotion-3 emotion-4"
      >
        click to enlarge
      </div>
    </div>
  </div>
</DocumentFragment>
`;
